# Python_for_CV

./: .gitignore  .pre-commit-config.yaml  folder.py  git.md  pyproject.toml  readme.md
Core_Python _Basics_for_CV/: chapter-2-core-python-basics.md
Introduction/: chapter-1-introduction.md
OOP/: chapter-3-oop-in-cv.md
Sec1_Intro/: README.md  cv_hello_world.py
Sec2_Core_Python_CV/: Error_handling.ipynb  Files_DIR_ Tutorial.ipynb  IF_LOOP.ipynb  OpenCV_PILLOW.ipynb  README.md  Variables_Numbers_Strings_CV.ipynb  dictionaries_notebook.ipynb  functions_notebook.ipynb  lists.ipynb  tuples_notebook.ipynb
Sec3_Working_with_Images/: OpenCV_PILLOW_Advance.ipynb  README.md  sec3_project.py
Sec4Adv_OOP_CV/: python_inheritance.ipynb
Sec4Adv_OOP_CV/Interitance_refactoring/: AdvancedProcessor.py  BaseImageProcessor.py  BasicImageProcessor.py  EdgeDetectionProcessor.py  FaceDetectionProcessor.py  FilterProcessor.py  main_.ipynb
Sec4_OOP_in_CV/: 02_classes_vs_functions.ipynb  ImageProcessor.py  README.md  classes.ipynb  main.py  python_classes.ipynb
